--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -329,9 +329,7 @@
 </div>
 </div>
 </div>
-<div class="QuestionInvitation-content">
-<div class="List">
-</div>
+<div class="QuestionInvitation-content List">
 </div>
 </div>
 </div>
@@ -340,274 +338,6 @@
 </div>
 </div>
 <!--- div other for invite--->
-<script>
-/*
-function invite()
-{
-    $(".Invite").each(function(index,element){
-        $(element).click(function(){
-            var question_id=$(".QuestionPage").attr("data-question-id");
-            //inviter=$(element).attr("data-from");
-            receiver=$(element).attr("data-receiver");
-            //$.get('/ajax/invite/?question='+question_id+'&from='+inviter+'&to='+invitee,function(ret){
-            $.get('/ajax/invite/?question='+question_id+'&to='+receiver,function(ret){
-                alert(ret);
-            });
-        });
-    });
-}
-function appendInviteElement(ret)
-{
-    for( i in ret)
-    {
-        var adept_id=ret[i][0];
-        var adept_name=ret[i][1];
-        var adept_avatar=ret[i][2];
-        var adept_mood=ret[i][3];
-        
-        var data='<div class="List-item">\
-                    <div class="ContentItem">\
-                    <div class="ContentItem-main">\
-                    <div class="ContentItem-image">\
-                    <span class="UserLink UserItem-avatar">\
-                    <a class="UserLink-link" target="_blank" href="/er/'+adept_id+'">\
-                    <img class="Avatar Avatar--large UserLink-avatar PeoplePopover" width="60" height="60" src="'+adept_avatar+'" srcset="'+adept_avatar+'" alt="'+adept_name+'" data-author-id="'+adept_id+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">\
-                    </a>\
-                    </span>\
-                    </div>\
-                    <div class="ContentItem-head">\
-                    <h2 class="ContentItem-title">\
-                    <div class="UserItem-title">\
-                    <span class="UserLink UserItem-name">\
-                    <a class="UserLink-link" target="_blank" href="/er/'+adept_id+'"><span class="RichText">'+adept_name+'</span></a>\
-                    </span>\
-                    </div>\
-                    </h2>\
-                    <div class="ContentItem-meta">\
-                    <div>\
-                    <div class="ContentItem-status">\
-                    <div class="ContentItem-statusItem">'+adept_mood+'</div>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    <div class="ContentItem-extra">\
-                    <button class="Button Button--blue Invite" type="button" data-receiver="'+adept_id+'">邀请回答</button>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    ';
-        console.log(data);
-        $(".QuestionInvitation-content>.List").append(data);
-    }
-}
-function showInvite()
-{
-    var topics="";
-    $(".TopicLink").each(function(){
-        topics+=($(this).attr("data-topic-id"))+";";
-    });
 
-    $.post("/ajax/topic_adept/",{"topics":topics},function(ret){
-        if("fail"!=ret)
-        {
-            appendInviteElement(ret);
-            $("#inviteModal").modal('show');
-            checkSets();
-            invite();
-        }
-    })
-    //$("#inviteModal").modal('show');
-}
-
-function appendAuthorCardElement(ret)
-{
-    var author_id=ret[0];
-    var author_name=ret[1];
-    var author_avatar=ret[2];
-    var author_mood=ret[3];
-    var author_answer_nums=ret[4];
-    var author_follower_nums=ret[5];
-    var author_followed=ret[6];
-    var author_sexual=ret[7];
-    if("f"==author_sexual)
-    {
-        var who="she";
-        var who_han="她";
-    }
-    else
-    {
-        var who="he";
-        var who_han="他";
-    }
-    var data1='\<div class="Card-header AnswerAuthor-title"><div class="Card-headerText">关于作者</div>\</div>\
-    <div class="Card-section">\
-    <div class="AnswerAuthor-user">\
-    <div class="AnswerAuthor-user-avatar">\
-    <span class="UserLink">\
-    <a class="UserLink-link" href="/er/'+author_id+'">\
-    <img class="Avatar Avatar--large UserLink-avatar" width="60" height="60" src="'+author_avatar+'" srcset="'+author_avatar+'" alt="'+author_name+'">\
-    </a>\
-    </span>\
-    </div>\
-    <div class="AnswerAuthor-user-content">\
-    <div class="AnswerAuthor-user-name">\
-    <span class="UserLink">\
-    <a class="UserLink-link" href="/er/'+author_id+'">'+author_name+'</a>\
-    </span>\
-    </div>\
-    <div class="AnswerAuthor-user-headline">\
-    <div class="RichText">'+author_mood+'</div>\
-    </div>\
-    </div>\
-    </div>\
-    </div>\
-    <div class="Card-section">\
-    <div class="AnswerAuthor-counts">\
-    <div class="NumberBoard">\
-    <a class="Button NumberBoard-item Button--plain" type="button" href="/er/'+author_id+'/answers"><div class="NumberBoard-name">回答</div>\
-    <div class="NumberBoard-value">'+author_answer_nums+'</div>\
-    </a>\
-    <a class="Button NumberBoard-item Button--plain" type="button" href="/er/'+author_id+'/posts">\
-    <div class="NumberBoard-name">文章</div>\
-    <div class="NumberBoard-value">10</div>\
-    </a>\
-    <a class="Button NumberBoard-item Button--plain" type="button" href="/er/'+author_id+'/followers">\
-    <div class="NumberBoard-name">关注者</div>\
-    <div class="NumberBoard-value" data-update-value-type="people-followed">'+author_follower_nums+'</div>\
-    </a>\
-    </div>\
-    </div>\
-    ';
-    if (author_followed)
-        var data2='<div class="MemberButtonGroup AnswerAuthor-buttons"><button class="Button FollowButton Button--primary Button--grey" type="button" data-er-id="'+author_id+'" data-follow-type="people" data-followed="true" data-who="'+who+'">已关注</button><button class="Button" type="button" data-toggle="modal" data-target="#letterModal">发私信</button></div></div>';
-    else
-        var data2='<div class="MemberButtonGroup AnswerAuthor-buttons"><button class="Button FollowButton Button--primary Button--blue" type="button" data-er-id="'+author_id+'" data-follow-type="people" data-followed="false" data-who="'+who+'">关注'+who_han+'</button><button class="Button" type="button" data-toggle="modal" data-target="#letterModal">发私信</button></div></div>';
-    var data=data1+data2;
-    $(".Card.AnswerAuthor").append(data);
-    setLetterReceiver(author_id,author_name);
-}
-function showAuthorCard()
-{
-    var author_id=$(".AnswerCard").attr("data-author-id");
-    if(null!=author_id)
-    {
-        $.get("/ajax/er/"+author_id+"/",function(ret){
-            if("fail"!=ret)
-            {
-                appendAuthorCardElement(ret);
-                checkSets();
-            }
-        });
-        return "more";
-    }
-    else
-    {
-        console.log("author_id is null");
-        
-        return "all";
-    }
-}
-function getMoreAnswerData()
-{
-        var order=1;
-        var start=0;
-        var end=2;
-        var question_id=$(".QuestionPage").attr("data-question-id");
-        $.get('/ajax/answers/'+question_id+'/'+order+'/'+start+'/'+end+'/',function(ret){
-            if("fail"!=ret)
-            {
-                appendAnswerElementList(ret,"more");
-                checkSets();
-            }
-            setLockScrollMoreData("false");
-        });
-}
-function getAllAnswerData()
-{
-        var nums=g_last_getmoredata_index;//$('#AnswerItems .List-item').length;
-        var order=1;
-        var start=nums;
-        var end=start+STEP;
-        var question_id=$(".QuestionPage").attr("data-question-id");
-        $.get('/ajax/answers/'+question_id+'/'+order+'/'+start+'/'+end+'/',function(ret){
-            if("fail"!=ret)
-            {
-                appendAnswerElementList(ret,"all");
-                checkSets();
-                g_last_getmoredata_index+=STEP;
-            }
-            setLockScrollMoreData("false");
-        });
-}
-function getMoreData()
-{
-    if("all"==g_list_type)
-    {
-        getAllAnswerData();
-    }
-}
-
-function initAllAnswerList()
-{
-        var answer_nums=$(".QuestionPage").attr("data-question-answer-nums");
-        var data='<div class="Card">\
-            <div class="List">\
-            <div class="List-header">\
-            <h4 class="List-headerText">\
-            <span>'+answer_nums+' 个回答</span>\
-            </h4>\
-            </div>\
-            <div id="appendArea"></div>\
-            </div>\
-            </div>\
-            ';
-        $("#listArea").append(data);
-}
-
-function init()
-{
-    g_list_type=showAuthorCard();
-    if("more"==g_list_type)
-    {
-        getMoreAnswerData();
-    }
-    else
-    {
-        initAllAnswerList();
-        getMoreData();
-    }    
-    //prepare_content();
-    checkSets();
-    
-    $('#summernote_answer').summernote({
-    toolbar: [
-    // [groupName, [list of button]]
-    ['style', ['bold', 'italic', 'underline', 'clear']],
-    ['font', ['strikethrough', 'superscript', 'subscript']],
-    ['fontsize', ['fontsize']],
-    ['color', ['color']],
-    ['para', ['paragraph']],
-    ['table', ['table']],
-    ['link', ['link']],
-    ['picture', ['picture']],
-    ['video', ['video']],
-    ['fullscreen', ['fullscreen']]
-    ],
-    height:200,
-    lang:'zh-CN',
-    placeholder:'写回答...',
-    callbacks: {
-        onImageUpload: function(files){
-            scaleAndUploadImage("forAnswer",files[0],720);
-        }
-    }
-    });
-    
-    appendLetterModal();
-}
-*/
-</script>
 </body>
 </html>
