--- a/question/templates/question/t_no_feature.html
+++ b/question/templates/question/t_no_feature.html
@@ -9,7 +9,7 @@
 
 
 <!--------------------main---------------------->
-<main role="main" class="App-main">
+<main role="main" class="App-main" data-module="nofeature" data-dfs-main='{}'>
 <h1>功能实现中，敬请期待</h1>         
 </main>
 <!--------------------main end-------------------->
