--- a/question/templates/question/head_mobile.html
+++ b/question/templates/question/head_mobile.html
@@ -6,18 +6,30 @@
 <meta name="renderer" content="webkit">
 <meta name="force-rendering" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
+<!--
 <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.min.css' %}">
 <link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
+-->
+<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
+<link rel="stylesheet" href="https://cdn.bootcss.com/summernote/0.8.8/summernote.css">
 <link rel="stylesheet" type="text/css" href="{% static 'common/mobile_z_main.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'common/mobile_main.css' %}">
-    
+ 
+<!--   
 <script src="{%static 'common/jquery-3.2.1/jquery.min.js' %}"></script>
 <script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
 <script src="{% static 'common/bootstrap-select-1.12.4/js/bootstrap-select.min.js' %}"></script>
 <script src="{% static 'common/bootstrap-select-1.12.4/js/i18n/defaults-zh_CN.js' %}"></script>
 <script src="{% static 'common/summernote-0.8.8/summernote.min.js' %}"></script>
 <script src="{% static 'common/summernote-0.8.8/lang/summernote-zh-CN.js' %}"></script>
+-->
+<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap-select/1.12.4/js/i18n/defaults-zh_CN.js"></script>
+<script src="https://cdn.bootcss.com/summernote/0.8.8/summernote.min.js"></script>
+<script src="https://cdn.bootcss.com/summernote/0.8.8/lang/summernote-zh-CN.js"></script>
 <script src="{% static 'common/mobile_main.js' %}"></script>
 </head>
