--- a/question/templates/question/header.html
+++ b/question/templates/question/header.html
@@ -45,8 +45,10 @@
 <div class="AppHeader-userInfo">
 <div class="AppHeader-profile">
 <div>
+<a href="/signinup/?next=/" style="text-decoration:none">
 <button type="button" class="Button AppHeader-login Button--blue">登录</button>
 <button type="button" class="Button Button--primary Button--blue">加入知乎</button>
+</a>
 </div>
 </div>
 </div>
