--- a/question/templates/question/head.html
+++ b/question/templates/question/head.html
@@ -3,17 +3,32 @@
 <meta http-equiv="X-UA-Compatible" content="IE=11">
 <meta charset="utf-8">
 <title>首页 - 大大大</title>
+<!--
 <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.min.css' %}">
 <link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
+-->
+<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
+<link rel="stylesheet" href="https://cdn.bootcss.com/summernote/0.8.8/summernote.css">
 <link rel="stylesheet" type="text/css" href="{% static 'common/z_main.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'common/main.css' %}">
+
+
     
+<!--
 <script src="{%static 'common/jquery-3.2.1/jquery.min.js' %}"></script>
 <script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
 <script src="{% static 'common/bootstrap-select-1.12.4/js/bootstrap-select.min.js' %}"></script>
 <script src="{% static 'common/bootstrap-select-1.12.4/js/i18n/defaults-zh_CN.js' %}"></script>
 <script src="{% static 'common/summernote-0.8.8/summernote.min.js' %}"></script>
 <script src="{% static 'common/summernote-0.8.8/lang/summernote-zh-CN.js' %}"></script>
+-->
+<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap-select/1.12.4/js/i18n/defaults-zh_CN.js"></script>
+<script src="https://cdn.bootcss.com/summernote/0.8.8/summernote.min.js"></script>
+<script src="https://cdn.bootcss.com/summernote/0.8.8/lang/summernote-zh-CN.js"></script>
 <script src="{% static 'common/main.js' %}"></script>
 </head>
