--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -124,7 +124,7 @@
 
     <div class="Question-main">
         <div class="Question-mainColumn">
-        <div class="Card QuestionAnswers-answerAdd AnswerToolbar is-hide" data-question-answer-url="/ajax/question_answer/{{ context_question.id }}/">
+        <div class="Card QuestionAnswers-answerAdd AnswerToolbar is-hide">
         <div class="AnswerAdd">
         <div class="AnswerAdd-header">
         <div class="AuthorInfo AnswerAdd-info">
