--- a/question/templates/question/t_question_mobile.html
+++ b/question/templates/question/t_question_mobile.html
@@ -24,7 +24,7 @@
 <!--<div class="RichContent-inner"><span class="RichText CopyrightRichText-richText"></span></div>-->
 <div class="ContentItem-actions">
 <div class="MobileQuestionButtonGroup">
-<button class="Button FollowButton Button--primary Button--blue" type="button" data-follow-type="question"></button>
+<button class="Button FollowButton Button--primary Button--blue is-hide" type="button" data-follow-type="question"></button>
 <button class="Button Button--blue" type="button" onclick="showAnswerToolbar()">写回答</button>
 <button class="Button Button--blue" type="button" onclick="showInvite()">邀请回答</button>
 </div>
